- Added fix to image gallery overlay captions on mobile.

--- a/sites/all/themes/rebild/sass/partials/_nodes.scss
+++ b/sites/all/themes/rebild/sass/partials/_nodes.scss
@@ -114,9 +114,12 @@ Share nodes
 		.field-body {
 			
 		}
-		.field-name-field-main-youtube-link {
+		.field-name-field-main-youtube-link {			
 			iframe {
 				width: 100%;
+			}
+			.field-item {
+				margin-bottom: 20px;
 			}
 		}
 		/* Node Image Gallery */
@@ -150,6 +153,15 @@ Share nodes
 		}
 	}
 }
+
+/* Fancybox settings */
+.fancybox-title-float-wrap {
+	margin-bottom: -80px;
+	.child {
+		white-space: normal;	
+	}	
+}
+
 
 /*------------------------------------------------------------------
 	Accordions
