--- a/sites/all/themes/rebild/sass/rebild-alpha-default.scss
+++ b/sites/all/themes/rebild/sass/rebild-alpha-default.scss
@@ -463,7 +463,10 @@ Nodes
 		margin-top: 0;
 	}
 }
-
+/* Fancybox */
+.fancybox-title-float-wrap {
+	margin-bottom: -50px;
+}
 /* Page & News Articles */
 #region-content {
 	.node-page,
